--- a/EncomiendaBarinas/.classpath
+++ b/EncomiendaBarinas/.classpath
@@ -4,8 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/jfxrt.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate43"/>
-	<classpathentry kind="lib" path="C:/hibernate/mysql-connector-java-5.1.16/mysql-connector-java-5.1.16-bin.jar"/>
 	<classpathentry kind="lib" path="C:/hibernate/downloads/schudt-javafx-datepicker-0.0.2.jar"/>
 	<classpathentry kind="lib" path="C:/hibernate/downloads/Jasperreports/jasperreports-5.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/hibernate/downloads/Jasperreports/jasperreports-applet-5.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/hibernate/downloads/Jasperreports/jasperreports-fonts-5.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/hibernate/downloads/Jasperreports/jasperreports-javaflow-5.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
